--- a/www/css/index.css
+++ b/www/css/index.css
@@ -1,27 +1,42 @@
 
-body, html {
-  height: 100%;
-  width: 100%;
+
+/*example styles
+can be deleted and replaced with any css / framework
+*/
+body {
+    background-color:#E4E4E4;
+    background-image:linear-gradient(top, #A7A7A7 0%, #E4E4E4 51%);
+    background-image:-webkit-linear-gradient(top, #A7A7A7 0%, #E4E4E4 51%);
+    background-image:-ms-linear-gradient(top, #A7A7A7 0%, #E4E4E4 51%);
+    background-image:-webkit-gradient(
+        linear,
+        left top,
+        left bottom,
+        color-stop(0, #A7A7A7),
+        color-stop(0.51, #E4E4E4)
+    );
+    background-attachment:fixed;
+    font-family:'HelveticaNeue-Light', 'HelveticaNeue', Helvetica, Arial, sans-serif;
+    font-size:12px;
+    height:100%;
+    margin:0px;
+    padding:0px;
+    text-transform:uppercase;
+    width:100%;
 }
 
-body, .custom-background  {
-	margin:0;
-	-webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-    background: #FFF30C; /* For browsers that do not support gradients */
-    background: -webkit-linear-gradient(#FFF30C, #8FBF1A); /* For Safari 5.1 to 6.0 */
-    background: -o-linear-gradient(#FFF30C, #8FBF1A); /* For Opera 11.1 to 12.0 */
-    background: -moz-linear-gradient(#FFF30C, #8FBF1A); /* For Firefox 3.6 to 15 */
-    background: linear-gradient(#FFF30C, #8FBF1A); /* Standard syntax (must be last) */  
+.app {
+    text-align: center;
 }
 
-/* add styles to the j query mobile classes */
-.rod-btn  {
-    background-color: #54AE3B !important;
-    border-color: #54AE3B !important;
-    text-shadow: none !important;
-    color: white !important;
-    border-radius: 3px;
+a {
+    display: inline-block;
+    width: 90%;
+    border: 1px solid gray;
+    text-decoration: none;
+    color: black;
+    font-weight: 200;
+    padding: 10px;
+    border-radius: 5px;
 }
+
