--- a/www/css/index.css
+++ b/www/css/index.css
@@ -3,19 +3,15 @@
 /*example styles
 can be deleted and replaced with any css / framework
 */
+html {
+    height: 150%;
+}
+
 body {
     background-color:#E4E4E4;
     background-image:linear-gradient(top, #A7A7A7 0%, #E4E4E4 51%);
     background-image:-webkit-linear-gradient(top, #A7A7A7 0%, #E4E4E4 51%);
     background-image:-ms-linear-gradient(top, #A7A7A7 0%, #E4E4E4 51%);
-    background-image:-webkit-gradient(
-        linear,
-        left top,
-        left bottom,
-        color-stop(0, #A7A7A7),
-        color-stop(0.51, #E4E4E4)
-    );
-    background-attachment:fixed;
     font-family:'HelveticaNeue-Light', 'HelveticaNeue', Helvetica, Arial, sans-serif;
     font-size:12px;
     height:100%;
@@ -36,7 +32,7 @@ a {
     text-decoration: none;
     color: black;
     font-weight: 200;
-    padding: 10px;
+    padding: 2px;
     border-radius: 5px;
 }
 
